--- a/api/Proyecto_BK/Proyecto_BK.API/Proyecto_BK.API.csproj
+++ b/api/Proyecto_BK/Proyecto_BK.API/Proyecto_BK.API.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Proyecto_BK.BusinessLogic\Proyecto_BK.BusinessLogic.csproj" />
+    <ProjectReference Include="..\Proyecto_BK.Common\Proyecto_BK.Common.csproj" />
   </ItemGroup>
 
 </Project>
