--- a/api/Proyecto_BK/Proyecto_BK.API/appsettings.json
+++ b/api/Proyecto_BK/Proyecto_BK.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Proyecto_BkConn": "data source=  dbSistemaRestauranteBK.mssql.somee.com; initial catalog=dbSistemaRestauranteBK ; user id=  Hector11S_SQLLogin_1; password= pohywztnyu"
+    "Proyecto_BkConn": "data source=  dbSistemaRestauranteBK.mssql.somee.com; initial catalog=dbSistemaRestauranteBK ; user id=  Hector11S_SQLLogin_1; password= 6k5i7ca1qu"
   },
   "Logging": {
     "LogLevel": {
